First final version - content and menu in order

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
+title: "Quantitative Tools for Qualitative Analysis: Computational Social Science meets Discourse Analysis"
+description: A workshop at the European Symposium Series on Societal Challenges in Computational Social Science, London 2017
 theme: jekyll-theme-minimal
+github: [metadata]
